[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/SavingLoading.gd" type="Script" id=1]

[node name="SaveScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 408.0
margin_top = 192.0
margin_right = -408.0
margin_bottom = -192.0
color = Color( 0.203922, 0.203922, 0.203922, 1 )

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Slot" type="VBoxContainer" parent="ColorRect/CenterContainer"]
margin_left = 25.0
margin_top = 35.0
margin_right = 183.0
margin_bottom = 181.0
custom_constants/separation = 16

[node name="labelPName" type="Label" parent="ColorRect/CenterContainer/Slot"]
margin_right = 158.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
text = "Player Name"
align = 1

[node name="labelPLevel" type="Label" parent="ColorRect/CenterContainer/Slot"]
margin_top = 36.0
margin_right = 158.0
margin_bottom = 50.0
text = "Player Level"
align = 1

[node name="labelMapName" type="Label" parent="ColorRect/CenterContainer/Slot"]
margin_top = 66.0
margin_right = 158.0
margin_bottom = 80.0
text = "Current Level"
align = 1

[node name="labelPosition" type="Label" parent="ColorRect/CenterContainer/Slot"]
margin_top = 96.0
margin_right = 158.0
margin_bottom = 110.0
text = "Player Position"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/CenterContainer/Slot"]
margin_top = 126.0
margin_right = 158.0
margin_bottom = 146.0

[node name="btnLoadData" type="Button" parent="ColorRect/CenterContainer/Slot/HBoxContainer"]
margin_right = 50.0
margin_bottom = 20.0
text = "Load1"

[node name="btnLoadData2" type="Button" parent="ColorRect/CenterContainer/Slot/HBoxContainer"]
margin_left = 54.0
margin_right = 104.0
margin_bottom = 20.0
text = "Load2"

[node name="btnLoadData3" type="Button" parent="ColorRect/CenterContainer/Slot/HBoxContainer"]
margin_left = 108.0
margin_right = 158.0
margin_bottom = 20.0
text = "Load3"

[connection signal="pressed" from="ColorRect/CenterContainer/Slot/HBoxContainer/btnLoadData" to="." method="_on_btnLoadData_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/Slot/HBoxContainer/btnLoadData2" to="." method="_on_btnLoadData2_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/Slot/HBoxContainer/btnLoadData3" to="." method="_on_btnLoadData3_pressed"]
